# SdPCR

./: README.md  pyproject.toml
how_to/: HowTo-Conda.md  HowTo-GitHub.md  HowTo-PyTest.md  HowTo-UsePyProject.md
src/sdpcr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdpcr/dpcr/: ddpcr_sim.py
tests/: test_ddpcr_sim.py
